--- a/Markdown hyperlink helper/Markdown hyperlink helper/MainWindow.xaml
+++ b/Markdown hyperlink helper/Markdown hyperlink helper/MainWindow.xaml
@@ -75,10 +75,9 @@
         <Grid Grid.Row="4" ToolTip="Click me to copy texts to the clipboard!">
             <Rectangle Fill="Aquamarine"/>
             <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
-                <TextBlock Name="text_output" TextWrapping="Wrap"
-                       PreviewMouseDown="text_output_PreviewMouseDown"/>
+                <TextBlock Name="text_output" TextWrapping="Wrap"/>
             </Grid>
-            
+            <Rectangle Fill="Transparent" PreviewMouseDown="text_output_PreviewMouseDown"/>
         </Grid>
     </Grid>
 </Window>
