--- a/Markdown hyperlink helper/Markdown hyperlink helper/MainWindow.xaml
+++ b/Markdown hyperlink helper/Markdown hyperlink helper/MainWindow.xaml
@@ -23,7 +23,7 @@
                       Checked="cb_prefix_CheckChanged" Unchecked="cb_prefix_CheckChanged">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Add prefix"/>
-                    <TextBox Name="tb_prefix" Width="100" VerticalContentAlignment="Center"/>
+                    <TextBox Name="tb_prefix" Width="100" VerticalContentAlignment="Center" Text="> - "/>
                 </StackPanel>
             </CheckBox>
         </Grid>
@@ -52,10 +52,47 @@
                 <Label Grid.Row="2" Grid.Column="0" Content="Link"/>
                 <Label Grid.Row="4" Grid.Column="0" Content="Video link"/>
                 <Label Grid.Row="6" Grid.Column="0" Content="Gallery link"/>
-                <TextBox Grid.Row="0" Grid.Column="1" Name="tb_topic"
+                <Grid Grid.Row="0" Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBox Name="tb_topic"
                          VerticalContentAlignment="Center"
                          ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"
                          PreviewMouseDown="TextBox_PreviewMouseDown"/>
+                    <Button Grid.Column="1" x:Name="btn_facebook" Width="25" 
+                            Background="Transparent" BorderThickness="0"
+                            Click="btn_media_Click">
+                        <StackPanel>
+                            <Image Source="/Resource/facebook.png"/>
+                        </StackPanel>
+                    </Button>
+                    <Button Grid.Column="2" x:Name="btn_twitter" Width="25" 
+                            Background="Transparent" BorderThickness="0"
+                            Click="btn_media_Click">
+                        <StackPanel>
+                            <Image Source="/Resource/twitter.png"/>
+                        </StackPanel>
+                    </Button>
+                    <Button Grid.Column="3" x:Name="btn_youtube" Width="25" 
+                            Background="Transparent" BorderThickness="0"
+                            Click="btn_media_Click">
+                        <StackPanel>
+                            <Image Source="/Resource/youtube.png"/>
+                        </StackPanel>
+                    </Button>
+                    <Button Grid.Column="4" x:Name="btn_instagram" Width="25" 
+                            Background="Transparent" BorderThickness="0"
+                            Click="btn_media_Click">
+                        <StackPanel>
+                            <Image Source="/Resource/instagram.png"/>
+                        </StackPanel>
+                    </Button>
+                </Grid>
                 <TextBox Grid.Row="2" Grid.Column="1" Name="tb_link"
                          VerticalContentAlignment="Center"
                          ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"
